--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             <hr class="hr">
             <div class="description">
                 <p>
-                    I build quality products with Java, Python, React JS, Angular JS, and Node JS. I also analyse  large dataset into smaller sets for validation and easy use with Statistics Programming Language R, Oracle, My SQL and Python.I also buid and design games with C++ and Kotlin.
+                    I build quality products with Java, Python, React JS, Angular JS, and Node JS. I also analyse  large dataset into smaller sets for validation and easy use with Statistics Programming Language R, Oracle, My SQL and Python.I buid and design games with C++ and Kotlin. I help to determine how a system should operate and provide guidance to the programmers who help write the program code.
                 </p>
             </div>
             <br>
             <div class="resume">
-                <a href="https://drive.google.com/open?id=1g1a0lBe8lRZZPEIVwcGmqpfddYVKJOt_" target="_blank">Here's my resume.</a>
+                <a href="https://drive.google.com/file/d/1U55JhgckYB9Nv9vRfhhiClQPzfSBNwpo/view?usp=sharing" target="_blank">Here's my resume.</a>
             </div>
             <div class="contact">
-                <a class="button" href="malito:andybuck19@outlook.com">
+                <a class="button" href="malito:chrisyandy19@gmail.com">
                     Get in touch
                 </a>
             </div>
