--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </aside>
         <main class="about">
             <h1 class="name">
-                Hi, I'm Buck
+                Hello, I'm Buck
             </h1>
             <p class="job">
                 Software Developer/Data Scientist/Deep Learning Expert/Game Developer
@@ -37,7 +37,7 @@
             <hr class="hr">
             <div class="description">
                 <p>
-                    I build quality products with Java, Python, React JS, Angular JS, and Node JS. I also analyse  large dataset into smaller sets for validation and easy use with Statistics Programming Language R, Oracle, My SQL and Python.I buid and design games with C++ and Kotlin. I help to determine how a system should operate and provide guidance to the programmers who help write the program code.
+                    I build quality products with Java, Python, React JS, Angular JS, and Node JS. I also analyse larger dataset into smaller sets for validation and easy use with Statistics Programming Language R, Oracle, My SQL and Python.I build and design games with C++ and Kotlin. I help to determine how a system should operate and provide guidance to the programmers who help write the program code.
                 </p>
             </div>
             <br>
@@ -45,24 +45,24 @@
                 <a href="https://drive.google.com/file/d/1U55JhgckYB9Nv9vRfhhiClQPzfSBNwpo/view?usp=sharing" target="_blank">Here's my resume.</a>
             </div>
             <div class="contact">
-                <a class="button" href="malito:chrisyandy19@gmail.com">
+                <a class="button" href="mailto:chrisyandy19@gmail.com">
                     Get in touch
                 </a>
             </div>
             <ul class="social">
                 <li>
                     <a href="https://twitter.com/andybuck19">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fontello-twitter"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/AndyBuck21">
-                        <i class="fab fa-github"></i>
+                        <i class="fontello-github"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/andrew-buck-essien-835030166/">
-                        <i class="fab fa-linkedin"></i>
+                        <i class="fontello-instagram"></i>
                     </a>
                 </li>
             </ul>
