--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/andrew-buck-essien-835030166/">
-                        <i class="fontello-instagram"></i>
+                        <i class="fontello-linkedin"></i>
                     </a>
                 </li>
             </ul>
