--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/andrew-buck-essien-835030166/">
-                        <i class="fontello-linkedin"></i>
+                    <a href="https://www.instagram/andybuck19">
+                        <i class="fontello-instagram"></i>
                     </a>
                 </li>
             </ul>
