--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram/andybuck19">
+                    <a href="https://www.instagram.com/andybuck19">
                         <i class="fontello-instagram"></i>
                     </a>
                 </li>
